--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
         </fieldset>
 
         <fieldset id="travelAdvice_VA">
-          <legend>Vertrek/aankomst keuze</legend>
+          <legend>Vertrek/aankomst en datum</legend>
           <input type="radio" name="f1-VA" id="f1-VA-V" class="Vertrek" />
           <label for="f1-VA-V" class="f1-VA-label label_Vertrek">Vertrek</label>
           <input type="radio" name="f1-VA" id="f1-VA-A" class="Aankomst" />
           <label for="f1-VA-A" class="f1-VA-label label_Aankomst">Aankomst</label>
-          <legend>Datum en tijd</legend>
           <input type="text" name="tA_datum" id="tA_datum">
           <!-- Dit is vanwege de externe JS-functie een tekstveld.-->
           <input type="time" name="" id="tA_tijd">
@@ -102,6 +101,7 @@
           </div>
         </fieldset>
         <button type="button" name="retrieveTravelAdvice">Plannen en aanmelden</button>
+      </form>
     </section>
     <section id="accessibility_mainContent" tabindex="1" class="CTAadvert">
       <h2>40% korting in de dalsuren + weekend</h2>
